# audio-converter

./: .gitignore  audio_converter.spec  build_installer.bat  installer.iss  pyproject.toml
.github/workflows/: build-installer.yml
audio_converter/: audio_io.py  cli.py  converter.py  gui.py
tests/: test_converter.py
